--- a/Example/GearKit/Samples/KeyboardScroll/GKKeyboardScrollViewController.xib
+++ b/Example/GearKit/Samples/KeyboardScroll/GKKeyboardScrollViewController.xib
@@ -5,7 +5,16 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="GKKeyboardScrollViewController" customModule="GearKit_Example" customModuleProvider="target"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="GKKeyboardScrollViewController" customModule="GearKit_Example" customModuleProvider="target">
+            <connections>
+                <outlet property="scrollView" destination="ra7-ax-fiJ" id="e58-DY-eK3"/>
+                <outlet property="textField1" destination="mSq-D3-hWT" id="s7F-qf-xvf"/>
+                <outlet property="textField2" destination="a3A-cK-LrD" id="scP-kI-Br2"/>
+                <outlet property="textField3" destination="qaP-IJ-pEp" id="801-zT-1QS"/>
+                <outlet property="textField4" destination="H6S-6r-vQ0" id="Vxl-ez-Hrk"/>
+                <outlet property="view" destination="iN0-l3-epB" id="BAJ-9M-9M7"/>
+            </connections>
+        </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
             <rect key="frame" x="0.0" y="0.0" width="600" height="736"/>
