--- a/Example/GearKit/Samples/ManualLogin/GKManualLoginViewController.xib
+++ b/Example/GearKit/Samples/ManualLogin/GKManualLoginViewController.xib
@@ -5,7 +5,16 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="GKManualLoginViewController" customModule="GearKit_Example" customModuleProvider="target">
+            <connections>
+                <outlet property="loginButton" destination="JGX-3B-M04" id="gex-7a-ZEj"/>
+                <outlet property="passwordTextField" destination="MLr-C8-BdN" id="PH8-rO-r0g"/>
+                <outlet property="rememberMeSwitch" destination="hL6-f2-01j" id="nAN-ep-UsJ"/>
+                <outlet property="scrollView" destination="CIu-KJ-pAN" id="kdn-y1-Qgg"/>
+                <outlet property="userNameTextField" destination="Ob0-G0-A2h" id="gix-lr-IPa"/>
+                <outlet property="view" destination="iN0-l3-epB" id="jrj-WH-S0U"/>
+            </connections>
+        </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
@@ -57,6 +66,9 @@
                                     <color key="value" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                 </userDefinedRuntimeAttribute>
                             </userDefinedRuntimeAttributes>
+                            <connections>
+                                <action selector="loginButtonPressed:" destination="-1" eventType="touchUpInside" id="bnR-AH-DHZ"/>
+                            </connections>
                         </button>
                     </subviews>
                     <constraints>
