Fix the radar sample
Cleanup unwanted files (added backlog link)

Continue refactoring ruthlessly.

--- a/Example/GearKit/Samples/KeyboardScroll/GKKeyboardScrollViewController.xib
+++ b/Example/GearKit/Samples/KeyboardScroll/GKKeyboardScrollViewController.xib
@@ -29,7 +29,7 @@
                                 <constraint firstAttribute="height" constant="30" id="Pyl-1a-ilN"/>
                             </constraints>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                            <textInputTraits key="textInputTraits"/>
+                            <textInputTraits key="textInputTraits" keyboardType="decimalPad" enablesReturnKeyAutomatically="YES"/>
                         </textField>
                         <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Input Text" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="a3A-cK-LrD">
                             <rect key="frame" x="16" y="180" width="568" height="30"/>
