--- a/Example/GearKit/Samples/Graphs/GKRadarGraph/GKRadarGraphViewController.xib
+++ b/Example/GearKit/Samples/Graphs/GKRadarGraph/GKRadarGraphViewController.xib
@@ -2,7 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9531"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="GKRadarGraphViewController" customModule="GearKit_Example" customModuleProvider="target">
@@ -17,7 +17,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Tta-Kf-k5D" customClass="GKRadarGraphView" customModule="GearKit">
-                    <rect key="frame" x="20" y="20" width="560" height="560"/>
+                    <rect key="frame" x="20" y="20" width="560" height="492"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <userDefinedRuntimeAttributes>
                         <userDefinedRuntimeAttribute type="color" keyPath="graphBackgroundColor">
@@ -40,13 +40,28 @@
                         </userDefinedRuntimeAttribute>
                     </userDefinedRuntimeAttributes>
                 </view>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ui1-dd-AUE">
+                    <rect key="frame" x="245.5" y="520" width="109" height="30"/>
+                    <state key="normal" title="Edit Parameters"/>
+                </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8Ik-wD-CbJ">
+                    <rect key="frame" x="264" y="556" width="72" height="30"/>
+                    <state key="normal" title="Edit series"/>
+                    <connections>
+                        <action selector="editSeriesButtonTapped:" destination="-1" eventType="touchUpInside" id="gud-3E-DHv"/>
+                    </connections>
+                </button>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstItem="Tta-Kf-k5D" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="20" id="0do-4H-1Xh"/>
-                <constraint firstAttribute="bottom" secondItem="Tta-Kf-k5D" secondAttribute="bottom" constant="20" id="dce-C2-x6e"/>
+                <constraint firstItem="8Ik-wD-CbJ" firstAttribute="top" secondItem="ui1-dd-AUE" secondAttribute="bottom" constant="6" id="26s-og-kMY"/>
+                <constraint firstAttribute="bottom" secondItem="8Ik-wD-CbJ" secondAttribute="bottom" constant="14" id="6ed-k6-vkU"/>
+                <constraint firstItem="8Ik-wD-CbJ" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="aDI-nf-A7R"/>
                 <constraint firstAttribute="trailing" secondItem="Tta-Kf-k5D" secondAttribute="trailing" constant="20" id="grz-2c-IjM"/>
+                <constraint firstItem="ui1-dd-AUE" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="jem-0m-TFZ"/>
                 <constraint firstItem="Tta-Kf-k5D" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="20" id="rnT-66-AKQ"/>
+                <constraint firstItem="ui1-dd-AUE" firstAttribute="top" secondItem="Tta-Kf-k5D" secondAttribute="bottom" constant="8" id="tWR-RV-7ro"/>
             </constraints>
         </view>
     </objects>
